WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278344
[text-box-trim] Fix vertical box trimming (cap, ex etc)
https://bugs.webkit.org/show_bug.cgi?id=278344
Summary
[text-box-trim] Fix vertical box trimming (cap, ex etc)
alan
Reported
2024-08-19 14:05:28 PDT
ssia
Attachments
Patch
(4.52 KB, patch)
2024-08-19 14:08 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(4.52 KB, patch)
2024-08-20 07:04 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-08-19 14:08:32 PDT
Created
attachment 472234
[details]
Patch
alan
Comment 2
2024-08-20 07:04:53 PDT
Created
attachment 472245
[details]
[fast-cq]Patch
EWS
Comment 3
2024-08-20 08:45:41 PDT
Committed
282493@main
(98981860e899): <
https://commits.webkit.org/282493@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472245
[details]
.
Radar WebKit Bug Importer
Comment 4
2024-08-20 08:46:12 PDT
<
rdar://problem/134345224
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug