[text-box-trim] Fix vertical box trimming (cap, ex etc) https://bugs.webkit.org/show_bug.cgi?id=278344

Reviewed by Antti Koivisto.

In case of vertical direction, root inlinebox's ascent/descent are based on the ideographic (central) baseline
which gives incorrect result when computing how much we need to trim for cap/ex/alphabetic.

* LayoutTests/TestExpectations:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::applyTextBoxTrimIfNeeded const):

Canonical link: https://commits.webkit.org/282493@main